--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "tareaAngular": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "tareaAngular"
+    }
+  },
+  "defaultProject": "tareaAngular",
+  "cli": {
+    "analytics": "a7ce75f2-db5e-4a29-b848-ac34600be75e"
+  }
 }
